tests/local/parse/bad-output-command.txt
;;; TOOL: wast2json
;;; ERROR: 1
;; syntax is (output name? text?)
(output)
(output "hello")
(output $var)
(output $var "hello")
(;; STDERR ;;;
tests/local/parse/bad-output-command.txt:4:2: error: expected valid module field
(output)
 ^
;;; STDERR ;;)
